syntax = "proto3";

service NameNodeService {
    rpc ListFiles (ListFilesRequest) returns (ListFilesResponse) {};
}

message ListFilesRequest {}

message ListFilesResponse {
    repeated string files = 1;
}